[package]
name = "bus_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.6.0"
reqwest = "0.11.13"
maxminddb = "0.23.0"
public-ip = "0.2.2"
tokio = { version = "1", features = ["rt"] }
