[package]
name = "bus_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.6.0"
reqwest = { version = "0.11.13", features = ["json"]}
maxminddb = "0.23.0"
public-ip = "0.2.2"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = { version = "1.0.91", features = ["raw_value"] }
serde = "1.0.151"
dotenvy = "0.15.6"
